// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LQIP > blurhash LQIP is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
import { decode2url as t } from "@responsive-image/core/blurhash/decode";
//#region tests/fixtures/image.jpg
var n = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (t, r) => e(n, t, r ?? "jpeg")?.url,
	lqip: {
		inlineStyles: () => ({ "background-image": \`url("\${t("M53KT1R8D8y.t2M.oxylRoRlHYniyBRQXR", 5, 3)}")\` }),
		attribute: "bh:5:3:M53KT1R8D8y.t2M.oxylRoRlHYniyBRQXR"
	}
});
//#endregion
"
`;

exports[`LQIP > color LQIP is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg
var t = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "jpeg")?.url,
	lqip: { class: "ri-dyn-0" }
});
//#endregion
"
`;

exports[`LQIP > color LQIP is supported 2`] = `
".ri-dyn-0{background-color:#083838}
/*$vite$:1*/"
`;

exports[`LQIP > color LQIP with inline styles is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg.xyz?_plugin=responsive-image/lqip/color-css&inline=1
var t = { "background-color": "#083838" }, n = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (t, r) => e(n, t, r ?? "jpeg")?.url,
	lqip: { inlineStyles: t }
});
//#endregion
"
`;

exports[`LQIP > inline LQIP is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg
var t = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "jpeg")?.url,
	lqip: { class: "ri-dyn-0" }
});
//#endregion
"
`;

exports[`LQIP > inline LQIP is supported 2`] = `
".ri-dyn-0{background-image:url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB2aWV3Qm94PSIwIDAgMjQwMCAxNjAzIj4KPGZpbHRlciBpZD0iYiIgY29sb3ItaW50ZXJwb2xhdGlvbi1maWx0ZXJzPSJzUkdCIj48ZmVHYXVzc2lhbkJsdXIgc3RkRGV2aWF0aW9uPSIuNSI+PC9mZUdhdXNzaWFuQmx1cj48ZmVDb21wb25lbnRUcmFuc2Zlcj48ZmVGdW5jQSB0eXBlPSJkaXNjcmV0ZSIgdGFibGVWYWx1ZXM9IjEgMSI+PC9mZUZ1bmNBPjwvZmVDb21wb25lbnRUcmFuc2Zlcj48L2ZpbHRlcj4KPGltYWdlIGZpbHRlcj0idXJsKCNiKSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSIgaGVpZ2h0PSIxMDAlIiB3aWR0aD0iMTAwJSIgeGxpbms6aHJlZj0iZGF0YTppbWFnZS9wbmc7YmFzZTY0LGlWQk9SdzBLR2dvQUFBQU5TVWhFVWdBQUFBa0FBQUFHQ0FJQUFBQ2VwU09TQUFBQUNYQklXWE1BQUFzVEFBQUxFd0VBbXB3WUFBQUFzRWxFUVZSNG5HTmdOamRtMTlEbmxOTmlrOVZrMFRKZ2NiTm50YlprMWpGZzFEZGdZUFp6NFBKdzR0VzE0Rll5NXRBejV3N3pZWE4zNG5LdzR3MXpaMkQxYytYT0NSR0tEeGF3ZE9NemNaWE1pWk9LQ1ZaSkMrTDNzbVpnTTdQbThiQVhqWFZVS2dvMnpRcEoycEJqVlJZaWFHZkJvcXpDd0tLcnpxR2p3YVdoSXVPdGI1NW5acDVqSWVoZ3ltNWt4S3Fwd2NBc0w4c2lMOG1xSzh0am95cmhxS3BUcVNNZXBNMWhhc1JpWWdnQXM0QWVMZm5QR3hZQUFBQUFTVVZPUks1Q1lJST0iPjwvaW1hZ2U+Cjwvc3ZnPg==)}
/*$vite$:1*/"
`;

exports[`LQIP > inline LQIP with inline styles is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg.xyz?_plugin=responsive-image/lqip/inline-css&targetPixels=60&inline=1
var t = { "background-image": "url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB2aWV3Qm94PSIwIDAgMjQwMCAxNjAzIj4KPGZpbHRlciBpZD0iYiIgY29sb3ItaW50ZXJwb2xhdGlvbi1maWx0ZXJzPSJzUkdCIj48ZmVHYXVzc2lhbkJsdXIgc3RkRGV2aWF0aW9uPSIuNSI+PC9mZUdhdXNzaWFuQmx1cj48ZmVDb21wb25lbnRUcmFuc2Zlcj48ZmVGdW5jQSB0eXBlPSJkaXNjcmV0ZSIgdGFibGVWYWx1ZXM9IjEgMSI+PC9mZUZ1bmNBPjwvZmVDb21wb25lbnRUcmFuc2Zlcj48L2ZpbHRlcj4KPGltYWdlIGZpbHRlcj0idXJsKCNiKSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSIgaGVpZ2h0PSIxMDAlIiB3aWR0aD0iMTAwJSIgeGxpbms6aHJlZj0iZGF0YTppbWFnZS9wbmc7YmFzZTY0LGlWQk9SdzBLR2dvQUFBQU5TVWhFVWdBQUFBa0FBQUFHQ0FJQUFBQ2VwU09TQUFBQUNYQklXWE1BQUFzVEFBQUxFd0VBbXB3WUFBQUFzRWxFUVZSNG5HTmdOamRtMTlEbmxOTmlrOVZrMFRKZ2NiTm50YlprMWpGZzFEZGdZUFp6NFBKdzR0VzE0Rll5NXRBejV3N3pZWE4zNG5LdzR3MXpaMkQxYytYT0NSR0tEeGF3ZE9NemNaWE1pWk9LQ1ZaSkMrTDNzbVpnTTdQbThiQVhqWFZVS2dvMnpRcEoycEJqVlJZaWFHZkJvcXpDd0tLcnpxR2p3YVdoSXVPdGI1NW5acDVqSWVoZ3ltNWt4S3Fwd2NBc0w4c2lMOG1xSzh0am95cmhxS3BUcVNNZXBNMWhhc1JpWWdnQXM0QWVMZm5QR3hZQUFBQUFTVVZPUks1Q1lJST0iPjwvaW1hZ2U+Cjwvc3ZnPg==)" }, n = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (t, r) => e(n, t, r ?? "jpeg")?.url,
	lqip: { inlineStyles: t }
});
//#endregion
"
`;

exports[`LQIP > thumbhash LQIP is supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
import { decode2url as t } from "@responsive-image/core/thumbhash/decode";
//#region tests/fixtures/image.jpg
var n = [
	{
		url: "/image-100w.jpg",
		width: 100,
		format: "jpeg"
	},
	{
		url: "/image-100w.webp",
		width: 100,
		format: "webp"
	},
	{
		url: "/image-200w.jpg",
		width: 200,
		format: "jpeg"
	},
	{
		url: "/image-200w.webp",
		width: 200,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (t, r) => e(n, t, r ?? "jpeg")?.url,
	lqip: {
		inlineStyles: () => ({ "background-image": \`url("\${t("jJcFFYI1fIWHe4dweXlYeUaAmWj3")}")\` }),
		attribute: "th:jJcFFYI1fIWHe4dweXlYeUaAmWj3"
	}
});
//#endregion
"
`;

exports[`custom loader options are supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg
var t = [{
	url: "/test-100.png",
	width: 100,
	format: "png"
}, {
	url: "/test-200.png",
	width: 200,
	format: "png"
}];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["png"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "png")?.url,
	lqip: void 0
});
//#endregion
"
`;

exports[`custom query params are supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg?w=100;200&format=png
var t = [{
	url: "/image-100w.png",
	width: 100,
	format: "png"
}, {
	url: "/image-200w.png",
	width: 200,
	format: "png"
}];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["png"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "png")?.url,
	lqip: void 0
});
//#endregion
"
`;

exports[`different aspect ratio 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg?w=100;200&format=png&aspect=2:3
var t = [{
	url: "/image-100w.png",
	width: 100,
	format: "png"
}, {
	url: "/image-200w.png",
	width: 200,
	format: "png"
}];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["png"],
	availableWidths: [100, 200],
	aspectRatio: .6666666666666666,
	imageUrlFor: (n, r) => e(t, n, r ?? "png")?.url,
	lqip: void 0
});
//#endregion
"
`;

exports[`filter > it operates on included assets 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg
var t = [
	{
		url: "/image-640w.jpg",
		width: 640,
		format: "jpeg"
	},
	{
		url: "/image-640w.webp",
		width: 640,
		format: "webp"
	},
	{
		url: "/image-1024w.jpg",
		width: 1024,
		format: "jpeg"
	},
	{
		url: "/image-1024w.webp",
		width: 1024,
		format: "webp"
	},
	{
		url: "/image-1920w.jpg",
		width: 1920,
		format: "jpeg"
	},
	{
		url: "/image-1920w.webp",
		width: 1920,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["jpeg", "webp"],
	availableWidths: [
		640,
		1024,
		1920
	],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "jpeg")?.url,
	lqip: void 0
});
//#endregion
"
`;

exports[`imagetools params are supported 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg?w=100;200&format=png&grayscale
var t = [{
	url: "/image-100w.png",
	width: 100,
	format: "png"
}, {
	url: "/image-200w.png",
	width: 200,
	format: "png"
}];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["png"],
	availableWidths: [100, 200],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "png")?.url,
	lqip: void 0
});
//#endregion
"
`;

exports[`it produces expected output 1`] = `
"import { findMatchingImage as e } from "@responsive-image/core";
//#region tests/fixtures/image.jpg
var t = [
	{
		url: "/image-640w.png",
		width: 640,
		format: "png"
	},
	{
		url: "/image-640w.webp",
		width: 640,
		format: "webp"
	},
	{
		url: "/image-1080w.png",
		width: 1080,
		format: "png"
	},
	{
		url: "/image-1080w.webp",
		width: 1080,
		format: "webp"
	},
	{
		url: "/image-1920w.png",
		width: 1920,
		format: "png"
	},
	{
		url: "/image-1920w.webp",
		width: 1920,
		format: "webp"
	}
];
//#endregion
//#region tests/fixtures/entry.js
console.log({
	imageTypes: ["png", "webp"],
	availableWidths: [
		640,
		1080,
		1920
	],
	aspectRatio: 1.5,
	imageUrlFor: (n, r) => e(t, n, r ?? "png")?.url,
	lqip: void 0
});
//#endregion
"
`;
